OZ_Backend Python Ch09~13

--- a/OZ_Backend/Python/Ch09~13/Ch10_task.ipynb
+++ b/OZ_Backend/Python/Ch09~13/Ch10_task.ipynb
@@ -37,7 +37,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```python\n",
+    "sum = 0 \n",
+    "for i in x:\n",
+    "    sum += i\n",
+    "print(sum/len(x))\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +77,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "3, 5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,7 +113,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2, 5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +148,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,7 +183,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "4"
+   ]
   }
  ],
  "metadata": {
