--- a/OZ_Backend/Python/Ch09~13/Ch11_task.ipynb
+++ b/OZ_Backend/Python/Ch09~13/Ch11_task.ipynb
@@ -24,8 +24,8 @@
     "<span style=\"font-size:80%\">[문제1]<br><br></span>\n",
     "tuple과 list의 차이점으로 올바른 것을 모두 골라주세요\n",
     "\n",
-    "1. list만인덱싱이 가능해 원하는 값을 인덱스로 추출할 수 있다.\n",
-    "2. tuple은 불편이고 list는 가변이다.\n",
+    "1. list만 인덱싱이 가능해 원하는 값을 인덱스로 추출할 수 있다.\n",
+    "2. tuple은 불변이고 list는 가변이다.\n",
     "3. tuple은 소괄호( () )를 사용하고 리스트는 대괄호( [ ] )를 사용한다.\n",
     "4. 튜플은 입출력이 자주 발행하는 경우 사용하고 리스트는 입출력이 자주 발생하지 않는 상황에 사용한다"
    ]
@@ -40,7 +40,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2, 3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +75,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,7 +109,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```python\n",
+    "TypeError: 'tuple' object does not support item assignment\n",
+    "```\n",
+    "위와 같은 Error가 발생하는데, tuple에는 요소 할당이 안되는 이슈입니다."
+   ]
   },
   {
    "cell_type": "markdown",
