--- a/OZ_Backend/Python/Ch09~13/Ch12_task.ipynb
+++ b/OZ_Backend/Python/Ch09~13/Ch12_task.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1, 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,7 +77,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1, 3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,7 +112,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```python\n",
+    "for point in ozkim.values():\n",
+    "    sum = 0\n",
+    "    sum += point\n",
+    "    result = sum/len(ozkim)\n",
+    "print(result)\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,7 +155,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```python\n",
+    "데이터 = {\"칼하트\" : [\"후디티\", \"2벌\"]}\n",
+    "상자.update(데이터)\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,7 +192,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```python\n",
+    "result = dict(zip(keys, vals))\n",
+    "print(result)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
