--- a/OZ_Backend/Python/Ch09~13/Ch13_task.ipynb
+++ b/OZ_Backend/Python/Ch09~13/Ch13_task.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,7 +77,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2, 5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,7 +108,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```python\n",
+    "\"두리안\" in 과일_바구니\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +145,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2, 3, 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,7 +180,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2"
+   ]
   }
  ],
  "metadata": {
